--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+button:focus {
+ outline: none!important;
+}
+
+.text-bold{
+  color: #000;
+  font-weight: bold!important;
+}
+.text-color{
+  color: #000;
+}
